--- a/using.html
+++ b/using.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="css/w3.css">
 <link rel="stylesheet" href="css/theme-teal	.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+<script src='js/eprase.js'></script>
 </head>
 <body>
 
@@ -70,40 +71,6 @@
     <i class="fa fa-chevron-circle-up"></i></span></a>
   </div>
 </footer>
-
-<!-- Script for fetching content, Sidebar, Tabs, Accordions -->
-<script>
-
-//fetch
-function getContent(file) {
-	window.location.assign(file);
-}
-
-
-// Side navigation
-function w3_open() {
-  var x = document.getElementById("mySidebar");
-  x.style.width = "40%";
-  x.style.fontSize = "1.2em";
-  x.style.paddingTop = "3%";
-  x.style.display = "block";
-}
-function w3_close() {
-  document.getElementById("mySidebar").style.display = "none";
-}
-
-
-// Accordions
-function myAccFunc(id) {
-  var x = document.getElementById(id);
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else { 
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-
-</script>
 
 </body>
 </html>
