Tinkering with colours
I can't stop tinkering. Somebody help me. I'm on holiday...

--- a/using.html
+++ b/using.html
@@ -29,7 +29,7 @@
   <h1 class="w3-xxxlarge w3-animate-left">ePRaSE: Using the Tool</h1>
   </div>
 </header>
-<div class="w3-bar w3-navbar-theme">
+<div class="w3-bar w3-navbar-theme w3-animate-right">
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('/')">Home</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('about.html')">About</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16 navbar-item-active" onclick="getContent('using.html')">Using the Tool</button>
