--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
   <h1 class="w3-xxxlarge w3-animate-left">ePRaSE</h1>
   </div>
 </header>
-
+<div class="w3-bar w3-navbar-theme">
+  <button class="w3-bar-item w3-button testbtn w3-padding-16 navbar-item-active" onclick="getContent('/')">Home</button>
+  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('about.html')">About</button>
+  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('using.html')">Using the Tool</button>
+  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('reports.html')">Reports</button>
+</div>
 <div id='content'>
 	<div class="w3-row-padding w3-center w3-margin-top">
 		<div onclick=getContent('about.html') class="w3-third clickable">
