--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ePRaSE: User Guide</title>
+<title>ePRaSE: FAQ</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
@@ -26,36 +26,17 @@
   <i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme"></i> 
   <div class="w3-center">
   <h4>Electronic Prescribing Risk and Safety Evaluation</h4>
-  <h1 class="w3-xxxlarge w3-animate-left">ePRaSE: User Guide</h1>
+  <h1 class="w3-xxxlarge w3-animate-left">ePRaSE: Frequently Asked Questions</h1>
   </div>
 </header>
 <div class="w3-bar w3-navbar-theme">
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('/')">Home</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('about.html')">About</button>
-  <button class="w3-bar-item w3-button testbtn w3-padding-16 navbar-item-active" onclick="getContent('using.html')">User Guide</button>
-  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('faq.html')">FAQ</button>
+  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('using.html')">User Guide</button>
+  <button class="w3-bar-item w3-button testbtn w3-padding-16 navbar-item-active" onclick="getContent('faq.html')">FAQ</button>
 </div>
 <div id="content">
 
-	<button onclick="myAccFunc('using_login')" class="w3-padding-16 w3-accordion-theme w3-button w3-block w3-left-align accordion-header">Register/Login</button>
-	<div id='using_login' class='accordion-text'>
-		<p>Registration and Login information...</p>
-	</div>
-
-	<button onclick="myAccFunc('using_begin')" class="w3-padding-16 w3-accordion-theme w3-button w3-block w3-left-align accordion-header">Begin Assessment</button>
-	<div id='using_begin' class='accordion-text w3-hide'>
-		<p>How to enter system information...</p>
-	</div>
-
-	<button onclick="myAccFunc('using_patients')" class="w3-padding-16 w3-accordion-theme w3-button w3-block w3-left-align accordion-header">Enter Patient Information</button>
-	<div id='using_patients' class='accordion-text w3-hide'>
-		<p>How to enter patient information...</p>
-	</div>
-	
-	<button onclick="myAccFunc('using_scenarios')" class="w3-padding-16 w3-accordion-theme w3-button w3-block w3-left-align accordion-header">Complete Assessment Scenarios</button>
-	<div id='using_scenarios' class='accordion-text w3-hide'>
-		<p>How to complete assessment scenarios...</p>
-	</div>
 	
 </div>
 <div w3-include-html="footer.html"></div>
