--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 </div>
 <!-- Main content -->
 <div id='content'>
+	<div class="w3-center w3-margin-top w3-margin-bottom">
+		<img src="img/Eprasestill@0.5x.png" alt="ePRaSE image" class="home_image"/>
+	</div>
+	<!--
 	<div class="w3-row-padding w3-center w3-margin-top">
 		<div onclick=getContent('about.html') class="w3-third clickable">
   			<div class="w3-card w3-container" style="min-height:350px">
@@ -57,6 +61,7 @@
   			</div>
 		</div>
 	</div>
+-->
 </div>
 
 <div w3-include-html="footer.html"></div>
