--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- Main content -->
 <div id='content'>
 	<div class="w3-center w3-margin-top w3-margin-bottom">
-		<img src="img/Eprasestill@0.5x.png" alt="ePRaSE image" class="home_image"/>
+		<img src="img/Eprasestill.jpg" alt="ePRaSE image" class="home_image"/>
 	</div>
 	<!--
 	<div class="w3-row-padding w3-center w3-margin-top">
