Adds "Sign up now" button on home page, link to tool

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 </div>
 <!-- Main content -->
 <div id='content'>
+	<button onclick="location.href='https://eprase.nhs.uk'" class="go2button" title="ePRaSE tool">Sign up now</button>
 	<div class="w3-center w3-margin-top w3-margin-bottom">
 		<img src="img/Eprasestill.jpg" alt="ePRaSE image" class="home_image"/>
 	</div>
