Style tweak to contact link

--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer class="w3-container w3-center w3-footer w3-padding-16">
 	<div class='w3-third w3-left'><img src='img/ncl_logo.png' alt='Newcastle University'></div>
 	<div class='w3-third'>
-  		<p><a href="mailto:nuth.eprase@nhs.net">Contact</a></p>
+  		<p class="eprase-contact"><a href="mailto:nuth.eprase@nhs.net">Contact</a></p>
   	</div>
   	<div class='w3-third w3-right'><img src='img/nhs_logo.png' alt='NHS England'></div>
 </footer>
