--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <div w3-include-html="header.html"></div>
 
 <div class="w3-bar w3-navbar-theme">
+	<button onclick="location.href='https://eprase.nhs.uk'" class="go2button" title="ePRaSE tool">Sign up now</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16 navbar-item-active" onclick="getContent('/')">Home</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('about.html')">About</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('using.html')">User Guide</button>
@@ -32,11 +33,11 @@
 </div>
 <!-- Main content -->
 <div id='content'>
-	<button onclick="location.href='https://eprase.nhs.uk'" class="go2button" title="ePRaSE tool">Sign up now</button>
+	<!--<button onclick="location.href='https://eprase.nhs.uk'" class="go2button" title="ePRaSE tool">Sign up now</button>
 	<div class="w3-center w3-margin-top w3-margin-bottom">
 		<img src="img/Eprasestill.jpg" alt="ePRaSE image" class="home_image"/>
 	</div>
-	<!--
+-->
 	<div class="w3-row-padding w3-center w3-margin-top">
 		<div onclick=getContent('about.html') class="w3-third clickable">
   			<div class="w3-card w3-container" style="min-height:350px">
@@ -62,7 +63,6 @@
   			</div>
 		</div>
 	</div>
--->
 </div>
 
 <div w3-include-html="footer.html"></div>
