--- a/using.html
+++ b/using.html
@@ -35,7 +35,7 @@
 	<div class="accordion-text">
 		<img class="eprase-image" src="img/notes.jpg" alt="stock image" />
 		<p>Step-by-step instructions for using the ePRaSE tool can be found
-			in <a href="assets/userguide2024.pdf" title="User Guide PDF">this PDF file</a>. 
+			in <a href="assets/Eprase2024UserGuide.pdf" title="User Guide PDF">this PDF file</a>. 
 			Alternatively, the video below also presents a walk-through of the 
 			ePRaSE system.
 		</p>
