Nav bar enhancement

--- a/faq.html
+++ b/faq.html
@@ -24,6 +24,7 @@
 <!-- Header -->
 <div w3-include-html="header.html"></div>
 <div class="w3-bar w3-navbar-theme">
+  <button onclick="location.href='https://eprase.nhs.uk'" class="go2button" title="ePRaSE tool">Sign up now</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('/')">Home</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('about.html')">About</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="getContent('using.html')">User Guide</button>
