Adds video, modifies some styles

--- a/using.html
+++ b/using.html
@@ -34,12 +34,15 @@
 <div id="content">
 <h1 class="eprase-h1 w3-animate-left">User Guide</h1>
 	<div class="accordion-text">
-		<img class="eprase-image" src="img/notes.jpg" alt="stock image" />
+		<!-- <img class="eprase-image" src="img/notes.jpg" alt="stock image" /> -->
 		<p>Step-by-step instructions for using the ePRaSE tool can be found
-			in <a href="assets/Eprase2024UserGuide.pdf" title="User Guide PDF">this PDF file</a>. 
+			in <a class="eprase-link" href="assets/Eprase2024UserGuide.pdf" title="User Guide PDF">this PDF file</a>. 
 			Alternatively, the video below also presents a walk-through of the 
 			ePRaSE system.
 		</p>
+    <div class="eprase-video">
+      <iframe src="https://www.youtube.com/embed/Ye621Z1R0R4"></iframe>
+    </div>
 	</div>
 </div>
 <div w3-include-html="footer.html"></div>
