--- a/header.html
+++ b/header.html
@@ -1,3 +1,3 @@
-<div class="eprase-header">
+<div id="eprase-header">
   <i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme burger"></i> 
 </div>
